--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>L0 Sybil Wallet Checker</title>
+    <title>Sybil Wallet Checker</title>
     <link href="https://fonts.googleapis.com/css2?family=Lexend&display=swap" rel="stylesheet">
     <style>
+        @keyframes colorChange {
+            0% { color: #076a6a; }
+            25% { color: #5d1ae4; }
+            50% { color: #e10f6d; }
+            75% { color: #930d93; }
+            100% { color: #ff0000; }
+        }
         body {
             font-family: 'Lexend', sans-serif;
             display: flex;
@@ -22,16 +29,43 @@
             font-size: 2rem;
             text-align: center;
             margin-bottom: 20px;
+            animation: colorChange 4s infinite;
         }
-        textarea {
-            margin: 10px;
-            padding: 10px;
+        .textarea-container {
+            position: relative;
             width: 100%;
             max-width: 600px;
+            margin: 10px 0;
+        }
+        .textarea-container textarea {
+            width: 100%;
             height: 150px;
-            box-sizing: border-box;
+            padding: 20px;
+            border: 2px solid #ccc;
+            border-radius: 10px;
             font-family: 'Lexend', sans-serif;
             font-size: 1rem;
+            box-sizing: border-box;
+            resize: none;
+            background: linear-gradient(145deg, #ffffff, #e6e6e6);
+            box-shadow: 5px 5px 10px #d1d1d1, -5px -5px 10px #ffffff;
+            outline: none;
+        }
+        .textarea-container textarea:focus {
+            border-color: #007bff;
+            box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
+        }
+        .textarea-placeholder {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: #aaa;
+            pointer-events: none;
+            font-family: 'Lexend', sans-serif;
+            font-size: 1rem;
+            text-align: center;
+            transition: opacity 0.3s;
         }
         button {
             padding: 10px 20px;
@@ -39,20 +73,32 @@
             cursor: pointer;
             font-family: 'Lexend', sans-serif;
             font-size: 1rem;
+            border: none;
+            border-radius: 5px;
+            background-color: #007bff;
+            color: white;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+            transition: background-color 0.3s, box-shadow 0.3s;
         }
-        #result-list {
+        button:hover {
+            background-color: #0056b3;
+            box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.3);
+        }
+        #result-table {
             margin-top: 20px;
             width: 100%;
             max-width: 600px;
+            border-collapse: collapse;
+            font-family: 'Lexend', sans-serif;
+            display: none;
         }
-        .result-item {
+        #result-table th, #result-table td {
             padding: 10px;
             border: 1px solid #ddd;
-            border-radius: 5px;
-            margin-top: 10px;
-            text-align: left;
-            word-wrap: break-word;
-            font-family: 'Lexend', sans-serif;
+            text-align: center; 
+        }
+        #result-table th {
+            background-color: #f2f2f2;
         }
         .sybil {
             color: red;
@@ -65,53 +111,100 @@
             font-size: 0.9rem;
             text-align: center;
             font-family: 'Lexend', sans-serif;
+            animation: colorChange 4s infinite;
         }
         footer a {
-            color: #007bff;
+            color: inherit;
             text-decoration: none;
         }
     </style>
 </head>
 <body>
     <h1>Layerzero Sybil Checker</h1>
-    <textarea id="walletAddresses" placeholder="Enter wallet addresses, each on a new line"></textarea>
-    <button onclick="checkAllWallets()">Check Now</button>
-    <div id="result-list"></div>
+    <div class="textarea-container">
+        <textarea id="walletAddresses" oninput="togglePlaceholder()"></textarea>
+        <div id="placeholder" class="textarea-placeholder">Enter wallet addresses, each on a new line</div>
+    </div>
+    <button onclick="checkAllWallets()">Check All Wallets</button>
+    <table id="result-table">
+        <thead>
+            <tr>
+                <th>Wallet Address</th>
+                <th>Status</th>
+            </tr>
+        </thead>
+        <tbody id="result-tbody"></tbody>
+    </table>
     <footer>
         Created by <a href="https://x.com/i_5ive" target="_blank">Zenith</a>
     </footer>
 
     <script>
-        async function checkAllWallets() {
-            const walletAddresses = document.getElementById('walletAddresses').value.trim().split('\n').map(addr => addr.trim()).filter(addr => addr);
-            const resultList = document.getElementById('result-list');
-            resultList.innerHTML = 'Checking...';
-
-            try {
-                const response = await fetch('https://raw.githubusercontent.com/LayerZero-Labs/sybil-report/main/initialList.txt');
-                const text = await response.text();
-                const addresses = text.split('\n').map(addr => addr.trim());
-
-                resultList.innerHTML = '';
-                walletAddresses.forEach(walletAddress => {
-                    const div = document.createElement('div');
-                    div.className = 'result-item';
-
-                    if (addresses.includes(walletAddress)) {
-                        div.textContent = `${walletAddress} - YOU ARE SYBIL`;
-                        div.classList.add('sybil');
-                    } else {
-                        div.textContent = `${walletAddress} - Congrats! Your wallet is not in the sybil list`;
-                        div.classList.add('not-sybil');
-                    }
-
-                    resultList.appendChild(div);
-                });
-            } catch (error) {
-                resultList.innerHTML = 'Error fetching the Sybil list.';
-                console.error(error);
+        function togglePlaceholder() {
+            const textarea = document.getElementById('walletAddresses');
+            const placeholder = document.getElementById('placeholder');
+            if (textarea.value.trim()) {
+                placeholder.style.opacity = '0';
+            } else {
+                placeholder.style.opacity = '1';
             }
         }
+
+        async function checkAllWallets() {
+    const walletAddressesInput = document.getElementById('walletAddresses');
+    const walletAddresses = walletAddressesInput.value.trim().split('\n').map(addr => addr.trim()).filter(addr => addr);
+    const resultTbody = document.getElementById('result-tbody');
+    const resultTable = document.getElementById('result-table');
+    resultTbody.innerHTML = '<tr><td colspan="2">Checking...</td></tr>';
+
+    
+    const addressRegex = /^(0x)?[0-9a-fA-F]{40}$/;
+
+    try {
+        const response = await fetch('https://raw.githubusercontent.com/LayerZero-Labs/sybil-report/main/initialList.txt');
+        const text = await response.text();
+        const addresses = text.split('\n').map(addr => addr.trim());
+
+        resultTbody.innerHTML = '';
+        walletAddresses.forEach(walletAddress => {
+            
+            if (!addressRegex.test(walletAddress)) {
+                const row = document.createElement('tr');
+                const walletCell = document.createElement('td');
+                walletCell.textContent = walletAddress;
+                const statusCell = document.createElement('td');
+                statusCell.textContent = 'Invalid Format';
+                statusCell.classList.add('sybil'); 
+                row.appendChild(walletCell);
+                row.appendChild(statusCell);
+                resultTbody.appendChild(row);
+                return; 
+            }
+
+            const row = document.createElement('tr');
+            const walletCell = document.createElement('td');
+            walletCell.textContent = walletAddress;
+
+            const statusCell = document.createElement('td');
+            if (addresses.includes(walletAddress)) {
+                statusCell.textContent = 'SYBIL';
+                statusCell.classList.add('sybil');
+            } else {
+                statusCell.textContent = 'NOT SYBIL';
+                statusCell.classList.add('not-sybil');
+            }
+
+            row.appendChild(walletCell);
+            row.appendChild(statusCell);
+            resultTbody.appendChild(row);
+        });
+
+        resultTable.style.display = 'table';
+    } catch (error) {
+        resultTbody.innerHTML = '<tr><td colspan="2">Error fetching the Sybil list.</td></tr>';
+        console.error(error);
+    }
+}
     </script>
 </body>
 </html>
